// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PromptAdapter (Regression Harness) > Agent Observation Formatting > should format full observation context correctly 1`] = `
"OBSERVATION:
- User Input: "I want a scary story"
- Child: Billy (Age: 6)
- Mood: energetic
- ACTIVE GOAL: RELAXATION
- Environment: Night, Raining
- Relevant Memories: Likes dinosaurs
- Recent History: User said hello previously

DECISION TASK: Analyze the status and choose the next action."
`;

exports[`PromptAdapter (Regression Harness) > Agent Observation Formatting > should handle minimal/missing context gracefully 1`] = `
"OBSERVATION:
- User Input: "Hello"
- Child: Unknown (Age: ?)
- Mood: Unknown
- ACTIVE GOAL: None
- Environment: Unknown
- Relevant Memories: None
- Recent History: None

DECISION TASK: Analyze the status and choose the next action."
`;

exports[`PromptAdapter (Regression Harness) > Story Generation > should inject Companion Context if unlocked 1`] = `
"Write a captivating bedtime story.
Theme: Forest
Child: Tom
Age: unknown
Style: calm and magical
Duration: medium (short: 150-200 words, medium: 300-400 words, long: 500-700 words)
Context: 
Include the following Dream Companions as friendly sidekicks: Sparky the Dragon, Luna the Owl.

REQUIREMENTS:
1. SAFE: No violence, fear, or overstimulation.
2. CALMING: Use soothing vocabulary and steady pacing.
3. PERSONAL: Weave in the child's name and relevant memories if provided.
4. STRUCTURE: Title and content."
`;

exports[`PromptAdapter (Regression Harness) > Story Generation > should render a Standard Story Prompt 1`] = `
"Write a captivating bedtime story.
Theme: Space Adventure
Child: Sarah
Age: 8
Style: magical
Duration: long (short: 150-200 words, medium: 300-400 words, long: 500-700 words)
Context: Sarah wants to be an astronaut.


REQUIREMENTS:
1. SAFE: No violence, fear, or overstimulation.
2. CALMING: Use soothing vocabulary and steady pacing.
3. PERSONAL: Weave in the child's name and relevant memories if provided.
4. STRUCTURE: Title and content."
`;

exports[`PromptAdapter (Regression Harness) > Story Generation > should render a Story Rewrite Prompt 1`] = `
"Rewrite the bedtime story "The Space adventure".
Keep the SAME structure/beats: Intro -> Climax -> End
BUT change the details (setting, specific dialogue) to feel fresh.
Theme: Underwater (Variation)
Child: Sarah
Age: 8
Style: calm"
`;

exports[`PromptAdapter (Regression Harness) > System Prompts > should render the Bedtime Conductor system prompt correctly 1`] = `
"You are the Bedtime Conductor, a protective, empathetic, and highly intelligent AI agent.
Your mission is to orchestrate a bedtime ritual for a child and their parent.

CORE OBJECTIVES:
- RELAXATION: Transition the child to sleepy mode.
- BONDING: Strengthen parent-child connection.
- EDUCATION: Introduce gentle learning moments.
- GROWTH: Capture and cherish "Golden Moments".

YOUR REASONING PROCESS:
1. Identify all applicable goals for this specific context.
2. Check for conflicts (e.g., excitement of an adventure vs. relaxation for sleep).
3. Make conscious trade-offs if conflicts exist.
4. Decide on the best action.

AGENT CAPABILITIES:
- START_STORY: Trigger generation with refined parameters.
- REPLY: Warm, brief, "in-persona" conversational turn.
- SUGGEST: Propose a theme based on context/memory.
- FADE_OUT: End session if child is asleep.

OUTPUT FORMAT:
Return a JSON object:
{
  "goals_considered": string[],
  "conflicts_identified": string | null,
  "trade_off_made": string | null,
  "thought": string,
  "action": string,
  "confidence": number,
  "parameters": Record<string, any>
}"
`;

exports[`PromptAdapter (Regression Harness) > System Prompts > should render the Safety Fallback prompt correctly 1`] = `"Once upon a time, there was a tiny, fuzzy cloud. The cloud floated softly through the blue sky, watching the flowers below. It was very, very quiet and calm. The end."`;

exports[`PromptAdapter (Regression Harness) > System Prompts > should render the Start Story Trigger correctly 1`] = `"Start story about "Dragons and Knights""`;
